Correct Z-index

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -203,7 +203,7 @@ p {
 // ---------
 
 .navigation {
-//   border-bottom: 2px solid $light-gray;
+z-index: 1;
 }
 
 .home .navigation {
